Fixed overflow of the tabs

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-
+@utility no-scrollbar {
+  @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
+}
 @custom-variant dark (&:is(.dark *));
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
